# vpn-sultan-adas

./: .env.example  .gitignore  AI_ML_ANALYTICS_STRATEGY.md  API_DOCUMENTATION.md  CANARY_DEPLOYMENT.md  COMPLETION_SUMMARY.md  Cargo.toml  DEPLOYMENT_AND_TESTING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_IMPLEMENTATION_COMPLETE.md  DESKTOP_APP_ARCHITECTURE.md  DISASTER_RECOVERY_PLAN.md  DOCUMENTATION_INDEX.md  ENTERPRISE_PRODUCT_SPECS.md  FEATURE_SPECS_ADVANCED_VPN.md  FINAL_COMPLETION_REPORT.md  FINAL_PROJECT_MANIFEST.md  FINAL_SUMMARY.txt  IMPLEMENTATION_COMPLETE_TRACKER.md  IMPLEMENTATION_GUIDE.md  INCIDENT_RESPONSE.md  MASTER_IMPLEMENTATION_ROADMAP.md  MOBILE_APP_INTEGRATION_GUIDE.md  ON_CALL_RUNBOOK.md  PHASE_2_DEPLOYMENT_SUMMARY.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_2_OPERATIONS_SETUP.md  PHASE_3_IMPLEMENTATION_GUIDE.md  PHASE_4_IMPLEMENTATION_GUIDE.md  PHASE_5_IMPLEMENTATION_GUIDE.md  POST_LAUNCH_STABILIZATION_GUIDE.md  PRODUCTION_DEPLOYMENT_AND_ENHANCEMENT_ROADMAP.md  PRODUCTION_DEPLOYMENT_RUNBOOK.md  PRODUCTION_LAUNCH_CHECKLIST.md  PRODUCTION_READY_FINAL_SUMMARY.md  PROJECT_ARCHIVE_QUICK_START.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUARTER_2_3_ROADMAP.md  (+15 more)
.github/workflows/: ci-cd.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  extractors.rs  main.rs  routes.rs  tests.rs
crates/api/src/handlers/: admin_dashboard.rs  agent.rs  auth.rs  auth_2fa.rs  file_upload.rs  health.rs  mod.rs  peer.rs  websocket.rs
crates/api/src/integrations/: stripe.rs
crates/api/src/middleware/: error_handler.rs  rate_limiting.rs
crates/api/tests/: integration_tests.rs
crates/crypto/: Cargo.toml
crates/data/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: auth_service.rs  lib.rs  node_service.rs  peer_service.rs  user_service.rs
crates/shared/: Cargo.toml
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.frontend  nginx.conf
frontend/: angular.json  index.html  package-lock.json  package.json  simple.html
frontend/src/: index.html  styles.scss
k8s/: deployment.yaml
migrations/: 20260327_001_init_schema.sql
monitoring/: alert-rules.yml  alertmanager.yml  loki-config.yml  prometheus.yml  promtail-config.yml
nginx/: nginx.conf
operations/: disaster-recovery-scaling.md  incident-response-playbooks.md  metrics-alerting-guide.md  operational-runbooks.md
scripts/: backup.sh  canary-deployment-simulation.sh  emergency-incident-response.sh  quick-setup.sh  scaffold-mobile-app.sh  setup-monitoring.sh  smoke-tests.sh
terraform/: main.tf
tests/: integration_2fa.rs  integration_file_upload.rs  integration_payments.rs  integration_rate_limiting.rs  load-test.js
(+48 files in other folders)
