[workspace]
members = [
    "crates/shared",
    "crates/crypto",
    "crates/data",
    "crates/domain",
    "crates/api",
    "crates/agent",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
postgres = "0.19"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# JWT & Auth
jsonwebtoken = "9.0"
argon2 = "0.5"

# Crypto & Security
aes-gcm = "0.10"
rand = "0.8"

# Common types
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"
config = "0.13"

# Rate limiting
governor = "0.10"

# Testing
tokio-test = "0.4"
mockall = "0.12"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
