[package]
name = "vpn-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpn-agent"
path = "src/main.rs"

[dependencies]
vpn-shared = { path = "../shared" }
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
