[package]
name = "vpn-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpn-api"
path = "src/main.rs"

[dependencies]
vpn-shared = { path = "../shared" }
vpn-data = { path = "../data" }
vpn-domain = { path = "../domain" }
vpn-crypto = { path = "../crypto" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
governor.workspace = true
